--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
