--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
+    compile group: 'com.google.guava', name: 'guava', version: '23.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
